src/main/default/objects/DHM_Merge_Contact_History__c/DHM_Merge_Contact_History__c.object-meta.xml
<CustomObject>
    <label>DHM Merge Contact History</label>
    <nameField>
        <displayFormat>Merge History {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHM Merge Contact Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>