src/main/default/objects/DHM_Merge_Contact_History__c/fields/Ignore_Value__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Value__c</fullName>
    <description>Value ignored during the merge and instead using the Merge value in the Merged object.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value ignored during the merge and instead using the Merge value in the Merged object.</inlineHelpText>
    <label>Duplicate Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>